--- a/1/home.html
+++ b/1/home.html
@@ -149,7 +149,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <h3><b>So what do you need to do to start earning money?</b></h3>
             <ul>
         <li>
-          <p style="display: inline;">First, open an account with a broker by <a href="#start123" data-linkgroup="text"  target="_blank">clicking here</a> (you’ll need to enter your name, email address, phone number, password, choose the account currency and tick to show your agreement; click Register).</p>
+          <p style="display: inline;">First, open an account with a broker by <a href="#start123" data-linkgroup="text">clicking here</a> (you’ll need to enter your name, email address, phone number, password, choose the account currency and tick to show your agreement; click Register).</p>
                     </li>
         <li>
           <p style="display: inline;">Step-by-step you’ll be shown 7 tips describing what’s displayed on your account. Look through all the material by pressing «NEXT STEP» after every description.</p>
