--- a/1/home.html
+++ b/1/home.html
@@ -903,7 +903,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="footer wrapper">
   <div style="margin: 50px auto 20px; color: rgb(153, 153, 153);">
     <br>
-    <p>2022 © fin24news.com</p><br>
+    <p>Earnings Disclaimer: Every effort has been made to accurately represent this product and it's potential. Even though this industry is one of the few where one can write their own check in terms of earnings, there is no guarantee that you will earn any money using the techniques and ideas in this product.
+
+Examples in these materials are not to be taken as a promise or guarantee of earnings. Earning potential is entirely dependent on the person using our product, ideas, techniques and most importantly the effort put forth. We do not purport this as a "get rich scheme", and nor should you view it as such.
+
+© Copyright 2022 Himang Patel - All Rights Reserved</p><br>
   </div>
 </div>
 
