--- a/1/home.html
+++ b/1/home.html
@@ -25,7 +25,7 @@
   </script>
 
 
-
+<script>(function(w,d,t,r,u){var f,n,i;w[u]=w[u]||[],f=function(){var o={ti:"148023822"};o.q=w[u],w[u]=new UET(o),w[u].push("pageLoad")},n=d.createElement(t),n.src=r,n.async=1,n.onload=n.onreadystatechange=function(){var s=this.readyState;s&&s!=="loaded"&&s!=="complete"||(f(),n.onload=n.onreadystatechange=null)},i=d.getElementsByTagName(t)[0],i.parentNode.insertBefore(n,i)})(window,document,"script","//bat.bing.com/bat.js","uetq");</script>
 
 
 
@@ -46,10 +46,7 @@
 
 </head>
 <body>
-  <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PKPQ2PC"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+
 <header class="site-header compact-mobile-header">
     <div class="wrapper">
             
@@ -869,7 +866,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 
                 <div style="text-align: center; margin-top: 20px;">
-                  <a  href="#start123" data-linkgroup="cta" class="big-blue-link"   target="_blank">
+                  <a  href="#start123" data-linkgroup="cta" class="big-blue-link">
                     REGISTER NOW                  </a>
                 </div>
                                     </div>
