--- a/1/home.html
+++ b/1/home.html
@@ -191,7 +191,9 @@
 <a name="important" id="scroll_event"></a>
 
 <img src="money.jpg">
+<u><h2>Watch Me Earning Rs 6,500/- Live From Trading in 5 mins.</h2></u>
 
+<iframe width="500" height="515" src="https://www.youtube.com/embed/8QmJaYX9TcA" style="border: 6px solid red;" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 <a href="#start123" data-linkgroup="cta"  class="big-blue-link" >TRY IT NOW</a>
@@ -280,7 +282,8 @@
 	  <div id="start123"><h1>
 	  Try It Yourself! Select Up or Down -</h1><br>
 	  <iframe src="https://expertoption.net/trial/?refid=39055" frameborder="0" scrolling="no" width="600" height="375"></iframe><br></div>
-	  
+	  <a href="https://promo.expertoption.com/platform-advantages/?refid=39055" data-linkgroup="cta"  class="big-blue-link" >Start Earning!</a>
+
       <dl class="vdtb-tabs vdtb-rounded-tabs vdtb-tabs-comments vdtb-tabs-click">
         <dd class="vdtb-tabs-selected">
           <div class="vdtb-tab-content vdtb-tab-comments">
